--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -214,7 +214,7 @@ textarea-webkit-scrollbar {
 	box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 0px 10px 0 rgba(0, 0, 0, 0.12);
 	background: white;
 	border-radius: 50px;
-	width: 60%;
+	width: 60px;
 	padding: 2%;
 }
 
@@ -222,7 +222,7 @@ textarea-webkit-scrollbar {
 	/* display: none; */
 	position: fixed;
 	padding: 5px;
-	width: 10%;
+	width: 15%;
 	bottom: 0;
 	right: 0;
 	cursor: pointer;
